--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,11 +4,16 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.probuilder": "4.4.0",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.render-pipelines.universal": "10.2.2",
     "com.unity.test-framework": "1.1.19",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.4",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
+    "com.unity.xr.management": "3.2.17",
+    "com.unity.xr.openxr": "0.1.2-preview.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
