--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,7 +13,10 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
     "com.unity.xr.management": "3.2.17",
+    "com.unity.xr.mock-hmd": "1.2.0-preview.1",
+    "com.unity.xr.oculus": "1.6.1",
     "com.unity.xr.openxr": "0.1.2-preview.2",
+    "com.unity.xr.windowsmr": "4.2.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
