--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,16 +4,16 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.probuilder": "4.4.0",
+    "com.unity.probuilder": "4.5.0",
     "com.unity.progrids": "3.0.3-preview.6",
-    "com.unity.render-pipelines.universal": "10.3.1",
-    "com.unity.test-framework": "1.1.22",
-    "com.unity.textmeshpro": "3.0.1",
+    "com.unity.render-pipelines.universal": "10.3.2",
+    "com.unity.test-framework": "1.1.24",
+    "com.unity.textmeshpro": "3.0.4",
     "com.unity.timeline": "1.4.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
+    "com.unity.xr.interaction.toolkit": "1.0.0-pre.2",
     "com.unity.xr.management": "3.2.17",
-    "com.unity.xr.mock-hmd": "1.2.0-preview.1",
+    "com.unity.xr.mock-hmd": "1.3.0-preview.1",
     "com.unity.xr.oculus": "1.8.1",
     "com.unity.xr.openxr": "1.0.2",
     "com.unity.xr.windowsmr": "4.4.1",
